--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,9 +51,9 @@
 
     <com.hardbacknutter.nevertoomanybooks.core.widgets.MovableFloatingActionButton
         android:id="@+id/fab"
-        style="@style/FAB.Main"
+        style="@style/Widget.App.FloatingActionButton"
         android:visibility="invisible"
-        app:icon="@drawable/ic_baseline_add_24"
+        android:src="@drawable/ic_baseline_add_24"
         tools:visibility="visible"
         />
 
