--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -99,7 +99,8 @@
     <style name="Base.Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Material3 style attributes -->
         <item name="tabStyle">@style/Widget.App.TabLayout</item>
-        <item name="circularProgressIndicatorStyle">@style/Widget.App.CircularProgressIndicator</item>
+        <item name="circularProgressIndicatorStyle">@style/Widget.App.CircularProgressIndicator
+        </item>
         <item name="linearProgressIndicatorStyle">@style/Widget.App.LinearProgressIndicator</item>
         <item name="chipGroupStyle">@style/Widget.App.ChipGroup</item>
         <item name="snackbarTextViewStyle">@style/Widget.App.Snackbar.TextView</item>
@@ -108,6 +109,12 @@
         <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
         <item name="switchPreferenceStyle">@style/Widget.App.SwitchPreference</item>
         <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
+
+        <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
+        <item name="extendedFloatingActionButtonStyle">
+            @style/Widget.App.ExtendedFloatingActionButton
+        </item>
+
 
         <!-- We MUST set these separately! Just setting the common buttonBarButtonStyle is NOT enough -->
         <item name="buttonBarButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
