--- a/app/src/main/res/layout-land/fragment_maintenance.xml
+++ b/app/src/main/res/layout-land/fragment_maintenance.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -52,7 +52,7 @@
             style="@style/Button.Menu"
             android:text="@string/tip_reset_all"
             app:icon="@drawable/ic_baseline_undo_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/col0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header"
             />
@@ -62,7 +62,7 @@
             style="@style/Button.Menu"
             android:text="@string/option_purge_files"
             app:icon="@drawable/ic_baseline_remove_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/col0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_reset_tips"
             />
@@ -72,7 +72,7 @@
             style="@style/Button.Menu"
             android:text="@string/lbl_purge_blns"
             app:icon="@drawable/ic_baseline_remove_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/col0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_purge_files"
             />
@@ -82,7 +82,7 @@
             style="@style/Button.Menu"
             android:text="@string/option_rebuild_fts"
             app:icon="@drawable/ic_baseline_build_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/col0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_purge_blns"
             />
@@ -92,7 +92,7 @@
             style="@style/Button.Menu"
             android:text="@string/option_rebuild_index"
             app:icon="@drawable/ic_baseline_build_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/col0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_rebuild_fts"
             />
