--- a/app/src/main/res/layout-land/fragment_maintenance.xml
+++ b/app/src/main/res/layout-land/fragment_maintenance.xml
@@ -136,7 +136,7 @@
             />
 
         <Button
-            android:id="@+id/btn_debug_send_mail"
+            android:id="@+id/btn_create_bug_report"
             style="@style/Button.Menu"
             android:text="@string/option_bug_report"
             app:icon="@drawable/ic_baseline_bug_report_24"
@@ -153,7 +153,7 @@
             app:icon="@drawable/ic_baseline_keyboard_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/col0"
-            app:layout_constraintTop_toBottomOf="@id/btn_debug_send_mail"
+            app:layout_constraintTop_toBottomOf="@id/btn_create_bug_report"
             tools:visibility="visible"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
