--- a/app/src/main/res/drawable/ic_baseline_clear_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_clear_24.xml
@@ -18,13 +18,15 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<vector android:autoMirrored="true"
-        android:height="24dp"
-        android:tint="#000000"
-        android:viewportHeight="24"
-        android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="24dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white"
-          android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z" />
+        android:height="24dp"
+        android:autoMirrored="true"
+        android:tint="?attr/colorControlNormal"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+    <!--suppress LongLine -->
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z" />
 </vector>
