replace singleLine with maxLines=1

--- a/app/src/main/res/values/styles-bob.xml
+++ b/app/src/main/res/values/styles-bob.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -37,7 +37,7 @@
         <item name="android:textIsSelectable">true</item>
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
         <item name="android:ellipsize">marquee</item>
     </style>
 
@@ -53,7 +53,7 @@
         <item name="android:textAppearance">?attr/textAppearanceTitleMedium</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:marqueeRepeatLimit">marquee_forever</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <!-- *************************************************************************************** -->
