--- a/app/src/main/res/xml/preferences_site_bertrandpt.xml
+++ b/app/src/main/res/xml/preferences_site_bertrandpt.xml
@@ -27,6 +27,14 @@
 
         <SwitchPreference
             android:defaultValue="false"
+            android:icon="@drawable/ic_baseline_shop_24"
+            android:key="bertrandpt.search.shopping.menu"
+            android:summaryOff="@string/no"
+            android:summaryOn="@string/yes"
+            android:title="@string/pt_search_show_shopping_options" />
+
+        <SwitchPreference
+            android:defaultValue="false"
             android:icon="@drawable/ic_barcode"
             android:key="bertrandpt.search.byIsbn.prefer.10"
             android:summaryOff="@string/no"
