--- a/app/src/main/res/xml/preferences_site_bol.xml
+++ b/app/src/main/res/xml/preferences_site_bol.xml
@@ -35,7 +35,7 @@
             />
 
         <SwitchPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:icon="@drawable/ic_baseline_shop_24"
             android:key="bol.search.shopping.menu"
             android:summaryOff="@string/no"
