--- a/app/src/main/res/layout/dialog_edit_book_series_list.xml
+++ b/app/src/main/res/layout/dialog_edit_book_series_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -35,7 +35,7 @@
         >
 
         <!--
-            URGENT: decide if we want to use the dialog instead (as Author does)
+            TODO: decide if we want to use the dialog instead (as Author does)
                     The only extra field is the "is complete"...
             app:menu="@menu/toolbar_action_add2"
         -->
