--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -39,4 +39,7 @@
           type="dimen">0.75
     </item>
 
+    <dimen name="startup_splash_border">16dp</dimen>
+    <dimen name="startup_splash_min_width">300dp</dimen>
+    <dimen name="startup_splash_max_width">380dp</dimen>
 </resources>
