--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -216,4 +216,8 @@
 
     <!-- See the tab adapter used in EditBookFragment -->
     <bool name="combine_book_edit_tabs">false</bool>
+
+    <dimen name="startup_splash_border">8dp</dimen>
+    <dimen name="startup_splash_min_width">300dp</dimen>
+    <dimen name="startup_splash_max_width">340dp</dimen>
 </resources>
