--- a/app/src/main/res/layout/booksonbookshelf_row_book.xml
+++ b/app/src/main/res/layout/booksonbookshelf_row_book.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -109,12 +109,22 @@
                 />
 
             <TextView
+                android:id="@+id/original_title"
+                style="@style/BoB.Group.Book.OriginalTitle"
+                app:layout_constraintEnd_toStartOf="@id/icon_sidebar"
+                app:layout_constraintStart_toStartOf="@id/title"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                tools:ignore="SelectableText"
+                tools:text="@sample/data.json/book/title"
+                />
+
+            <TextView
                 android:id="@+id/series_title"
                 style="@style/BoB.Group.Book.SeriesTitle"
                 android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/icon_sidebar"
                 app:layout_constraintStart_toEndOf="@id/col1"
-                app:layout_constraintTop_toBottomOf="@id/title"
+                app:layout_constraintTop_toBottomOf="@id/original_title"
                 app:layout_constraintVertical_bias="0"
                 app:layout_constraintVertical_chainStyle="packed"
                 tools:ignore="SelectableText"
