--- a/app/src/main/res/xml/preferences_images.xml
+++ b/app/src/main/res/xml/preferences_images.xml
@@ -47,7 +47,7 @@
     <PreferenceCategory
         android:title="@string/option_cover_replace">
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:icon="@drawable/ic_baseline_undo_24"
             android:key="image.undo.enabled"
             android:title="@string/pt_cover_undo_enabled"
