--- a/app/src/main/res/layout-land/fragment_booksearch_by_text.xml
+++ b/app/src/main/res/layout-land/fragment_booksearch_by_text.xml
@@ -31,13 +31,21 @@
         style="@style/TopCentered"
         >
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.45"
+            />
+
         <TextView
             android:id="@+id/txt_warning"
             style="@style/Text.Header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
             android:layout_margin="@dimen/container_margin"
             android:text="@string/tip_book_search_by_text"
+            app:layout_constraintEnd_toStartOf="@id/middle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -45,22 +53,25 @@
         <TextView
             android:id="@+id/txt_limitations"
             style="@style/Text.Body"
+            android:layout_width="0dp"
             android:layout_marginStart="@dimen/container_margin"
             android:layout_marginTop="@dimen/section_margin_top"
             android:layout_marginEnd="@dimen/container_margin"
             android:textIsSelectable="true"
+            app:layout_constraintEnd_toStartOf="@id/middle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_warning"
-            tools:text="@string/warning_no_site_supports_this_method" />
+            tools:text="@string/warning_no_site_supports_this_method"
+            />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_author"
             style="@style/TIL.AutoCompleteTextView"
-            android:layout_marginTop="@dimen/section_margin_top"
             android:hint="@string/lbl_author"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_limitations"
+            app:layout_constraintStart_toStartOf="@id/middle"
+            app:layout_constraintTop_toTopOf="parent"
             >
 
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
@@ -77,7 +88,7 @@
             style="@style/TIL.Text.Title"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/middle"
             app:layout_constraintTop_toBottomOf="@id/lbl_author"
             >
 
@@ -98,7 +109,7 @@
             app:helperText="@string/info_isfdb_warning_limited_to"
             app:helperTextEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/middle"
             app:layout_constraintTop_toBottomOf="@id/lbl_title"
             tools:visibility="visible"
             >
